--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -41,14 +41,15 @@ body {
   }
   .office {
     position: relative;
-    width: 100%;
-    height: 100%;
-    animation: zoom 3.2s;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     .office-inside {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
+      animation: zoom 3.2s;
       .background {
         top: -220px;
         position: absolute;
@@ -127,113 +128,114 @@ body {
     animation: light-change 3s infinite alternate;
   }
 
-  @keyframes light-change {
-    0% {
-      box-shadow: 200px 200px 500px 300px rgba(255, 255, 255, 0.788);
-    }
-    100% {
-      box-shadow: 450px 350px 500px 400px rgba(255, 255, 255, 0.788);
-    }
-  }
-}
-
-.background-darkening-floor {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    135deg,
-    rgba(255, 255, 255, 0.541),
-    rgba(0, 0, 0, 0.801)
-  );
-}
-
-// For all items on Table
-
-.phone,
-.note,
-.book {
-  .item-title {
-    left: 50%;
-    transform: translateX(-50%) scale(0.4);
+  .background-darkening-floor {
     position: absolute;
     width: 100%;
-    min-width: fit-content;
-    padding: 20px 40px;
-    top: -50px;
-    background-color: #fff;
-    border-radius: 20px;
-    transition: 0.6s;
-    font-size: 600%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 800;
-    color: #000;
-    opacity: 0;
+    height: 100%;
+    background: linear-gradient(
+      135deg,
+      rgba(255, 255, 255, 0.541),
+      rgba(0, 0, 0, 0.801)
+    );
   }
-  box-shadow: 200px 200px 400px rgba(0, 0, 0, 0);
-  &.hover:hover {
-    transform: scale(0.25) translate(20px, -30%) rotate(0deg);
-    box-shadow: 200px 200px 80px rgba(0, 0, 0, 0.3);
-    filter: brightness(1.2);
-    z-index: 2;
-    &.note,
-    &.book {
-      box-shadow: 200px 200px 80px rgba(0, 0, 0, 0.3);
-    }
+
+  // For all items on Table
+
+  .phone,
+  .note,
+  .book {
     .item-title {
-      opacity: 1;
-      top: -200px;
-      transform: translateX(-50%) scale(1);
-    }
-    .background-darkening-items::after {
-      content: "";
-      z-index: 3;
-      width: 1000px;
-      height: 1px;
-      transform: rotate(-45deg);
-      box-shadow: 0 0 80px 10px #fff;
+      left: 50%;
+      transform: translateX(-50%) scale(0.4);
       position: absolute;
-      animation: shine 2.5s infinite;
-    }
-  }
-
-  &.scale {
-    transition: 0.3s;
-    box-shadow: 20px 15px 10px rgba(0, 0, 0, 0.7);
-    cursor: pointer;
-
-    &.note {
-      box-shadow: 12px 12px 10px rgba(0, 0, 0, 0.7);
-    }
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
       width: 100%;
-      height: 100%;
+      min-width: fit-content;
+      padding: 20px 40px;
+      top: -50px;
+      background-color: #fff;
+      border-radius: 20px;
+      transition: 0.6s;
+      font-size: 600%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 800;
+      color: #000;
+      opacity: 0;
+    }
+    box-shadow: 200px 200px 400px rgba(0, 0, 0, 0);
+    &.hover:hover {
+      transform: scale(0.25) translate(20px, -30%) rotate(0deg);
+      box-shadow: 200px 200px 80px rgba(0, 0, 0, 0.3);
+      filter: brightness(1.2);
+      z-index: 2;
+      &.note,
+      &.book {
+        box-shadow: 200px 200px 80px rgba(0, 0, 0, 0.3);
+      }
+      .item-title {
+        opacity: 1;
+        top: -200px;
+        transform: translateX(-50%) scale(1);
+      }
+      .background-darkening-items::after {
+        content: "";
+        z-index: 3;
+        width: 1000px;
+        height: 1px;
+        transform: rotate(-45deg);
+        box-shadow: 0 0 80px 10px #fff;
+        position: absolute;
+        animation: shine 2.5s infinite;
+      }
+    }
+
+    &.scale {
+      transition: 0.3s;
+      box-shadow: 20px 15px 10px rgba(0, 0, 0, 0.7);
+      cursor: pointer;
+
+      &.note {
+        box-shadow: 12px 12px 10px rgba(0, 0, 0, 0.7);
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &.noScale {
+      z-index: 5;
+    }
+    @keyframes shine {
+      0% {
+        top: -20%;
+        left: -300%;
+      }
+      60% {
+        left: 100%;
+        top: 100%;
+      }
+      100% {
+        left: 100%;
+        top: 100%;
+      }
     }
   }
-  &.noScale {
-    z-index: 5;
-  }
-  @keyframes shine {
-    0% {
-      top: -20%;
-      left: -300%;
-    }
-    60% {
-      left: 100%;
-      top: 100%;
-    }
-    100% {
-      left: 100%;
-      top: 100%;
+
+  @media (orientation: landscape) {
+    @keyframes light-change {
+      0% {
+        box-shadow: 200px 200px 500px 300px rgba(255, 255, 255, 0.788);
+      }
+      100% {
+        box-shadow: 450px 350px 500px 400px rgba(255, 255, 255, 0.788);
+      }
     }
   }
 }
-
 @media (max-width: 1500px) {
   .app {
     .office {
@@ -421,6 +423,7 @@ body {
     .office {
       .office-inside {
         .chair {
+          left: 13% !important;
           .secret-msg {
             font-size: 40%;
           }
@@ -431,7 +434,8 @@ body {
           }
         }
         .table {
-          animation: table-shadow-mobile 3s infinite alternate;
+          box-shadow: 40px 30px 20px rgba(0, 0, 0, 0.61);
+          animation: none;
           .monitor {
             &::before {
               width: 200px;
@@ -479,15 +483,18 @@ body {
             &.scale {
               .book-inside {
                 h1 {
-                  font-size: 3vw;
+                  font-size: 20px;
                 }
                 .skills-icons {
                   span {
-                    height: 3.5vw;
+                    height: 30px;
                     i {
-                      font-size: 3.4vw;
+                      font-size: 25px;
                     }
                   }
+                }
+                p {
+                  font-size: 7px;
                 }
               }
             }
@@ -499,6 +506,12 @@ body {
                 .note-item {
                   .copy {
                     font-size: 2vw;
+                  }
+                  h1 {
+                    font-size: 15px;
+                  }
+                  p {
+                    font-size: 5px;
                   }
                 }
                 .note-links {
@@ -512,6 +525,17 @@ body {
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 560px) {
+  .app {
+    .office {
+      .office-inside {
+        .chair {
+          left: 7% !important;
         }
       }
     }
@@ -536,7 +560,7 @@ body {
         .chair {
           width: 30vw;
           top: 50% !important;
-          left: 5% !important;
+          left: 0% !important;
         }
         .table {
           .monitor {
@@ -576,23 +600,6 @@ body {
               transform: scale(0.6) translate(-80%, -78%) rotate(-90deg) !important;
             }
           }
-          .book {
-            &.scale {
-              .book-inside {
-                h1 {
-                  font-size: 3vw;
-                }
-                .skills-icons {
-                  span {
-                    height: 2.3vw;
-                    i {
-                      font-size: 3vw;
-                    }
-                  }
-                }
-              }
-            }
-          }
         }
       }
     }
@@ -617,13 +624,14 @@ body {
       .office-inside {
         .chair {
           top: 50%;
-          left: 20vw;
+          left: 15vw;
           transform: translate(20px, -50%) rotate(90deg);
           &:hover {
             transform: translate(-30px, -40%) rotate(70deg);
           }
         }
         .table {
+          margin-right: 50px;
           border-radius: 7px;
           width: 80vw;
           height: 40vw;
